--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
       </roles>
       <timezone>Europe/Graz</timezone>
       <properties>
-        <picUrl>https://islam-hemida.github.io/cv/assets/img/profile.jpg</picUrl>
+        <picUrl>https://upload.wikimedia.org/wikipedia/commons/d/de/Bau_einer_pyramide.jpg</picUrl>
       </properties>
     </developer>
 
